--- a/css/cmb2.css
+++ b/css/cmb2.css
@@ -1,5 +1,5 @@
 /*!
- * CMB2 - v2.4.2 - 2018-06-01
+ * CMB2 - v2.4.2 - 2018-06-09
  * https://cmb2.io
  * Copyright (c) 2018
  * Licensed GPLv2+
@@ -427,7 +427,13 @@
 	padding: 5px;
 }
 
-/* line 340, sass/partials/_main_wrap.scss */
+/* line 341, sass/partials/_main_wrap.scss */
+
+.cmb-repeatable-group.sortable .cmb-group-title {
+	cursor: move;
+}
+
+/* line 346, sass/partials/_main_wrap.scss */
 
 .cmb-repeatable-group .cmb-group-title {
 	background-color: #e9e9e9;
@@ -438,7 +444,7 @@
 	line-height: 1.4;
 }
 
-/* line 348, sass/partials/_main_wrap.scss */
+/* line 354, sass/partials/_main_wrap.scss */
 
 .cmb-repeatable-group .cmb-group-title h4 {
 	border: 0;
@@ -448,14 +454,14 @@
 	padding: 0.5em 0.75em;
 }
 
-/* line 356, sass/partials/_main_wrap.scss */
+/* line 362, sass/partials/_main_wrap.scss */
 
 .cmb-repeatable-group .cmb-group-title .cmb-th {
 	display: block;
 	width: 100%;
 }
 
-/* line 362, sass/partials/_main_wrap.scss */
+/* line 368, sass/partials/_main_wrap.scss */
 
 .cmb-repeatable-group .cmb-group-description .cmb-th {
 	font-size: 1.2em;
@@ -474,7 +480,7 @@
 	margin-bottom: 0.5em;
 }
 
-/* line 366, sass/partials/_main_wrap.scss */
+/* line 372, sass/partials/_main_wrap.scss */
 
 .cmb-repeatable-group .cmb-shift-rows {
 	font-size: 1em;
@@ -482,7 +488,7 @@
 	text-decoration: none;
 }
 
-/* line 371, sass/partials/_main_wrap.scss */
+/* line 377, sass/partials/_main_wrap.scss */
 
 .cmb-repeatable-group .cmb-shift-rows .dashicons {
 	font-size: 1.5em;
@@ -491,19 +497,19 @@
 	width: 1em;
 }
 
-/* line 377, sass/partials/_main_wrap.scss */
+/* line 383, sass/partials/_main_wrap.scss */
 
 .cmb-repeatable-group .cmb-shift-rows .dashicons.dashicons-arrow-down-alt2 {
 	line-height: 1.3em;
 }
 
-/* line 384, sass/partials/_main_wrap.scss */
+/* line 390, sass/partials/_main_wrap.scss */
 
 .cmb-repeatable-group .cmb2-upload-button {
 	float: right;
 }
 
-/* line 390, sass/partials/_main_wrap.scss */
+/* line 396, sass/partials/_main_wrap.scss */
 
 p.cmb2-metabox-description {
 	color: #aaaaaa;
@@ -512,14 +518,14 @@ p.cmb2-metabox-description {
 	padding-top: .5em;
 }
 
-/* line 397, sass/partials/_main_wrap.scss */
+/* line 403, sass/partials/_main_wrap.scss */
 
 span.cmb2-metabox-description {
 	color: #aaaaaa;
 	font-style: italic;
 }
 
-/* line 402, sass/partials/_main_wrap.scss */
+/* line 408, sass/partials/_main_wrap.scss */
 
 .cmb2-metabox-title {
 	margin: 0 0 5px 0;
@@ -527,26 +533,26 @@ span.cmb2-metabox-description {
 	font-size: 14px;
 }
 
-/* line 408, sass/partials/_main_wrap.scss */
+/* line 414, sass/partials/_main_wrap.scss */
 
 .cmb-inline ul {
 	padding: 4px 0 0 0;
 }
 
-/* line 412, sass/partials/_main_wrap.scss */
+/* line 418, sass/partials/_main_wrap.scss */
 
 .cmb-inline li {
 	display: inline-block;
 	padding-right: 18px;
 }
 
-/* line 417, sass/partials/_main_wrap.scss */
+/* line 423, sass/partials/_main_wrap.scss */
 
 .cmb-type-textarea-code pre {
 	margin: 0;
 }
 
-/* line 423, sass/partials/_main_wrap.scss */
+/* line 429, sass/partials/_main_wrap.scss */
 
 .cmb2-media-status .img-status {
 	clear: none;
@@ -556,14 +562,14 @@ span.cmb2-metabox-description {
 	width: auto;
 }
 
-/* line 430, sass/partials/_main_wrap.scss */
+/* line 436, sass/partials/_main_wrap.scss */
 
 .cmb2-media-status .img-status img {
 	max-width: 350px;
 	height: auto;
 }
 
-/* line 436, sass/partials/_main_wrap.scss */
+/* line 442, sass/partials/_main_wrap.scss */
 
 .cmb2-media-status .img-status img,
 .cmb2-media-status .embed-status {
@@ -579,21 +585,21 @@ span.cmb2-metabox-description {
 	margin: 15px 0 0 0;
 }
 
-/* line 450, sass/partials/_main_wrap.scss */
+/* line 456, sass/partials/_main_wrap.scss */
 
 .cmb2-media-status .embed-status {
 	float: left;
 	max-width: 800px;
 }
 
-/* line 455, sass/partials/_main_wrap.scss */
+/* line 461, sass/partials/_main_wrap.scss */
 
 .cmb2-media-status .img-status,
 .cmb2-media-status .embed-status {
 	position: relative;
 }
 
-/* line 458, sass/partials/_main_wrap.scss */
+/* line 464, sass/partials/_main_wrap.scss */
 
 .cmb2-media-status .img-status .cmb2-remove-file-button,
 .cmb2-media-status .embed-status .cmb2-remove-file-button {
@@ -606,27 +612,27 @@ span.cmb2-metabox-description {
 	width: 16px;
 }
 
-/* line 472, sass/partials/_main_wrap.scss */
+/* line 478, sass/partials/_main_wrap.scss */
 
 .cmb2-media-status .img-status .cmb2-remove-file-button {
 	top: 10px;
 }
 
-/* line 477, sass/partials/_main_wrap.scss */
+/* line 483, sass/partials/_main_wrap.scss */
 
 .cmb2-media-status .img-status img,
 .cmb2-media-status .file-status > span {
 	cursor: pointer;
 }
 
-/* line 482, sass/partials/_main_wrap.scss */
+/* line 488, sass/partials/_main_wrap.scss */
 
 .cmb2-media-status.cmb-attach-list .img-status img,
 .cmb2-media-status.cmb-attach-list .file-status > span {
 	cursor: move;
 }
 
-/* line 489, sass/partials/_main_wrap.scss */
+/* line 495, sass/partials/_main_wrap.scss */
 
 .cmb-type-file-list .cmb2-media-status .img-status {
 	clear: none;
@@ -637,7 +643,7 @@ span.cmb2-metabox-description {
 	margin-top: 0;
 }
 
-/* line 498, sass/partials/_main_wrap.scss */
+/* line 504, sass/partials/_main_wrap.scss */
 
 .cmb-attach-list li {
 	clear: both;
@@ -647,26 +653,26 @@ span.cmb2-metabox-description {
 	margin-bottom: 10px;
 }
 
-/* line 504, sass/partials/_main_wrap.scss */
+/* line 510, sass/partials/_main_wrap.scss */
 
 .cmb-attach-list li img {
 	float: left;
 	margin-right: 10px;
 }
 
-/* line 510, sass/partials/_main_wrap.scss */
+/* line 516, sass/partials/_main_wrap.scss */
 
 .cmb2-remove-wrapper {
 	margin: 0;
 }
 
-/* line 514, sass/partials/_main_wrap.scss */
+/* line 520, sass/partials/_main_wrap.scss */
 
 .child-cmb2 .cmb-th {
 	text-align: left;
 }
 
-/* line 518, sass/partials/_main_wrap.scss */
+/* line 524, sass/partials/_main_wrap.scss */
 
 .cmb2-indented-hierarchy {
 	padding-left: 1.5em;
@@ -2067,7 +2073,7 @@ span.cmb2-metabox-description {
 	margin-bottom: 0.5em;
 }
 
-/* line 523, sass/partials/_main_wrap.scss */
+/* line 529, sass/partials/_main_wrap.scss */
 
 .cmb-th,
 .cmb-td,
