--- a/css/sass/partials/_main_wrap.scss
+++ b/css/sass/partials/_main_wrap.scss
@@ -298,30 +298,24 @@
 	}
 
 	.cmb-remove-row {
-		top: 7px;
-		right: 7px;
-		position: absolute;
-
+		top: 10px;
+		right: 10px;
 		width: auto;
+		position: absolute;
 		margin-left: 0;
-		padding: 0 !important; // Sometime, we need !important :).
 
+		padding: 0 !important; // Sometime, we need !important :).
+		z-index: 99999999;
 		display: none;
+
+		.dashicons {
+			color: #F55E4F !important;
+		}
 
 		> .cmb-remove-row-button {
 			font-size: 20px;
-			text-indent: -1000px;
-
-			overflow: hidden;
 			position: relative;
-
-			height: auto;
 			line-height: 1;
-			padding: 0 10px 0;
-
-			&:before {
-				@include pseudo-dashicons("\f335");
-			}
 		}
 	}
 
