--- a/css/sass/partials/_post_metaboxes.scss
+++ b/css/sass/partials/_post_metaboxes.scss
@@ -18,7 +18,7 @@
 		margin: 0;
 
 		> .cmb-field-list > .cmb-row {
-			padding: 1.8em 0;
+			padding: 1em 0;
 		}
 
 		input[type=text] {
@@ -30,8 +30,8 @@
 	}
 
 	.cmb-row {
-		padding: 0 0 1.8em;
-		margin: 0 0 0.8em;
+		padding: 0 0 1em;
+		margin: 0;
 
 		.cmbhandle {
 			right: -1em;
