Fix styling of repeatable field remove icon
There was a double up of icon from the latest upstream styles.

--- a/css/cmb2-front-rtl.css
+++ b/css/cmb2-front-rtl.css
@@ -1,7 +1,7 @@
 /*!
- * CMB2 - v2.10.1 - 2023-11-17
+ * CMB2 - v2.10.1 - 2024-05-13
  * https://cmb2.io
- * Copyright (c) 2023
+ * Copyright (c) 2024
  * Licensed GPLv2+
  */
 
@@ -268,28 +268,12 @@ body.block-editor-page.branch-5-3 .cmb2-wrap .cmb-row .cmb2-radio-list input[typ
 }
 .cmb-repeat-table .cmb-remove-row > .cmb-remove-row-button {
   font-size: 20px;
-  position: relative;
   line-height: 1;
   padding: 0 10px 0;
+  position: relative;
 }
-.cmb-repeat-table .cmb-remove-row > .cmb-remove-row-button:before {
-  content: "\f335";
-  font-family: "Dashicons";
-  speak: none;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
+.cmb-repeat-table .cmb-remove-row > .cmb-remove-row-button span {
   line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  margin: 0;
-  text-indent: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  line-height: 1.3;
 }
 .cmb-repeat-table .cmb-repeat-row:hover .cmb-remove-row {
   display: block;
