--- a/css/sass/partials/_main_wrap.scss
+++ b/css/sass/partials/_main_wrap.scss
@@ -10,7 +10,7 @@
 		max-width: 100%;
 	}
 
-	input[type="text"] {
+	input[type='text'] {
 
 		&.cmb2-oembed {
 			width: 100%;
@@ -53,7 +53,7 @@
 			padding: 2px 4px;
 		}
 
-		&:not([type="hidden"]) {
+		&:not([type='hidden']) {
 			+ input,
 			+ .button-secondary,
 			+ select {
@@ -87,12 +87,12 @@
 		background: $light-yellow;
 	}
 
-	input[type="radio"] {
+	input[type='radio'] {
 		margin: 0 5px 0 0;
 		padding: 0;
 	}
 
-	input[type="checkbox"] {
+	input[type='checkbox'] {
 		margin: 0 5px 0 0;
 		padding: 0;
 	}
@@ -151,7 +151,7 @@
 // Fixes bug created by 5.3+ block editor-specific styling
 // Over-specific selector to override WordPress's over-specific selector without !important
 // @todo - Remove when `body.branch-5-3` targeting 5.3+ is widely used
-body.block-editor-page.branch-5-3 .cmb2-wrap .cmb-row .cmb2-radio-list input[type="radio"]::before {
+body.block-editor-page.branch-5-3 .cmb2-wrap .cmb-row .cmb2-radio-list input[type='radio']::before {
 	margin: .1875rem;
 
 	@media screen and (max-width: 782px) {
@@ -323,13 +323,12 @@ body.block-editor-page.branch-5-3 .cmb2-wrap .cmb-row .cmb2-radio-list input[typ
 
 		> .cmb-remove-row-button {
 			font-size: 20px;
-			position: relative;
 			line-height: 1;
 			padding: 0 10px 0;
+			position: relative;
 
-			&:before {
-				@include pseudo-dashicons("\f335");
-				line-height: 1.3;
+			span {
+				line-height: 1;
 			}
 		}
 	}
